# orchestrix

./: .gitignore  CMakeLists.txt  FileProcessing.cpp  FileProcessing.h  README.md  README.md~  TableModel.cpp  orchestrix  orchestrix.pro  projectX.pro  res.qrc  resources.qrc
docs/: sprint#1.md  sprint#2.md  sprint#3.md
res/: help.txt  result.json  results.json
src/: Controller.cpp  Controller.h  EQWidget.cpp  EQWidget.h  EQWidget.ui  Game.cpp  Game.h  Indicator.cpp  Indicator.h  SoundHistogramm.cpp  SoundHistogramm.h  SoundHistogramm.ui  TableModel.cpp  User.cpp  User.h  main.cpp
src/Controller/: CMakeLists.txt  Controller.cpp  Controller.h  main.cpp
src/Controller/byESP/: CMakeLists.txt  Controller.cpp  Controller.h
src/Controller/byESP/forESP8266/: forESP8266.ino
src/Controller/byUSB/: CMakeLists.txt  Controller.cpp  Controller.h
src/Controller/forArduino/: forArduino.ino
src/Controller/forESP8266/: forESP8266.ino
src/Equalizer/: EqualizerInstruction.md  Equl.pro  equalizer.cpp  equalizer.h  mainwindow.h  mainwindow.ui
src/audio/: AudioData.cpp  AudioData.h  AudioManager.cpp  AudioManager.h  AudioPlayer.cpp  AudioPlayer.h  CMakeCache.txt  CMakeLists.txt  Spectrum.cpp  Spectrum.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  cmake_install.cmake  install_manifest.txt  orchestrix.cbp
src/audio/include/: audioSpectrum.h
src/audio/include/AudioManagement/: AudioData.h  AudioManager.h  AudioPlayer.h  Entity.h  OpenAL.h
src/audio/include/ConsoleGraphic/: ConsoleEqualizer.h  GraphicPlane.h
src/audio/include/SpectrumManagement/: Spectrum.h  SpectrumAnalyzer.h
src/audio/mp3-decoder/: main.cpp  mp3.cpp
src/audio/old res/: main.c  main1.c
src/audio/old/include/: equalizer.h  playerWav.h  wavFile.h
src/audio/old/src/: equalizer.cpp  main.cpp
src/audio/old/src/audio/: player.cpp
src/audio/old/src/audioPlayer/: AudioFile.h  AudioPlayer.h
src/audio/src/: main.cpp
src/audio/src/AudioManagement/: AudioData.cpp  AudioManager.cpp  AudioPlayer.cpp  play.cpp
src/audio/src/SpectrumManagement/: Spectrum.cpp  SpectrumAnalyzer.cpp
src/audio/src/audio/: audioSpectrum.cpp  wavFile.cpp
src/audio/src/audioPlayer/: AudioFile.cpp  AudioPlayer.cpp
src/audio/src/graphic/: ConsoleEqualizer.cpp  GraphicPlane.cpp
src/chartsExample/: GameplayWindow.cpp  GameplayWindow.ui  chartsExample.pro
src/eq/: equalizer.cpp  mainwindow.cpp
src/eq2/: equalizer.cpp  equalizer.h  mainwindow.cpp  mainwindow.ui  resources.qrc
src/examples/Equalizer/: Equl.pro  equalizer.h  mainwindow.cpp  mainwindow.h
src/examples/audio/: CMakeCache.txt  CMakeLists.txt  a.out.cbp  cmake_install.cmake  main.cpp  orchestrix.cbp
src/examples/audio/include/AudioManagement/: AudioPlayer.h
src/examples/audio/include/ConsoleGraphic/: ConsoleEqualizer.h
src/examples/audio/include/SpectrumManagement/: Spectrum.h  SpectrumAnalyzer.h
src/examples/audio/include/audio/: AudioData.h  AudioManager.h  AudioPlayer.h  OpenAL.h  Spectrum.h  SpectrumAnalyzer.h
src/examples/audio/include/graphic/: ConsoleEqualizer.h  GraphUtil.h  GraphicPlane.h
src/examples/audio/src/: main.cpp
src/examples/audio/src/AudioManagement/: AudioData.cpp  AudioManager.cpp
src/examples/audio/src/SpectrumManagement/: SpectrumAnalyzer.cpp
src/examples/audio/src/audio/: AudioData.cpp  AudioManager.cpp  AudioPlayer.cpp  OpenALUtils.cpp  Spectrum.cpp  SpectrumAnalyzer.cpp
src/examples/audio/src/graphic/: ConsoleEqualizer.cpp  GraphUtil.cpp  GraphicPlane.cpp
src/examples/chartsExample/: GameplayWindow.h  main.cpp
src/examples/eq/: OrchEqualizer.pro  equalizer.h  lineconnector.cpp  lineconnector.h  mainwindow.ui
src/examples/eq2/: equalizer.cpp  mainwindow.h  mainwindow.ui
src/examples/graphic/: GroupDynamic.pro  mainwindow.h  mainwindow.ui  mus.csv  qcustomplot.cpp  qcustomplot.h
src/examples/menu/: gdk.pro  helpwindow.cpp  helpwindow.h  helpwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.cpp  player.h  scorewindow.h  scorewindow.ui  startwindow.cpp  startwindow.ui
src/gameplay/: Controller.cpp  Controller.h  Game.cpp  Game.h  User.cpp  User.h
src/graphic/: doc.qrc  mainwindow.cpp
src/include/: FileProcessing.h  Indicator.h  TableModel.h  User.h
src/menu/: scorewindow.cpp  startwindow.h
src/orchestrix_sample/: GameplayWindow.cpp  GameplayWindow.h  GameplayWindow.ui  main.cpp  orchestrix_sample.pro  res.qrc
src/windows/: EQWidget.h  GameDialog.cpp  GameDialog.h  HelpDialog.cpp  HelpDialog.h  LoginDialog.cpp  LoginDialog.h  MenuDialog.cpp  MenuDialog.h  ResultsDialog.cpp  ResultsDialog.h  SoundHistogramm.cpp  StartWindow.cpp  StartWindow.h
src/windows/uis/: GameDialog.ui  GamplayDialog.ui  HelpDialog.ui  LoginDialog.ui  MenuDialog.ui  ResultsDialog.ui  StartWindow.ui
